# vizdataquality

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
docs/: api_reference.rst  calculate.rst  conf.py  datasets.rst  examples.rst  index.rst  plot.rst  report.rst  tutorials.rst  utils.rst
examples/: APC_simulated_unique_values.csv  Bus%20stops%20NT%20%26%20NC.csv  Domestic%20Consumption%20Monitor%20monthly%20meter%20readings%202010-2015.csv  Performance%20Commitment%205%20-%20Leakage%20converted.csv  Quarter 4 201819.csv  README.md  README.txt  bus_stops_data_attribution_statement.txt  dft-road-casualty-statistics-road-safety-open-dataset-data-guide-2024.xlsx  diabetes_data_attribution_statement.txt  lcc_pothole_reports_data_mill_Oct%202025.csv  missing_data_structure_2.csv  parking_fines_data_attribution_statement.txt  report_parking fines.html  road_safety_data_attribution_statement.txt  simple_example_report.html  simple_example_report.txt  water_leakage_data_attribution_statement.txt  water_meter_readings_data_attribution_statement - Copy.txt  water_meter_readings_data_attribution_statement.txt
examples/Parking_fines_report/: report_parking fines.html  report_parking fines.tex  report_parking_fines.html  report_parking_fines.tex
examples/Simple_report/: simple_example_report.html  simple_example_report.tex  simple_example_report.txt
examples/import_export/: IO_example_cardinality.csv  IO_example_degree.csv  IO_example_intersections.csv  IO_example_records.csv  IO_example_variables.csv  IO_graph_graph.csv  IO_graph_graph_intersections.csv  IO_graph_graph_nodes.csv
notebooks/: Bar chart (missing values).ipynb  Box plot (numeric, date & time).ipynb  Box plot (value distribution).ipynb  Datetime value distribution.ipynb  Dot & whisker (value lengths).ipynb  Line chart (value counts).ipynb  Lollipop (value counts).ipynb  README.md  Report.ipynb  Simple example.ipynb  Stacked bar chart (value counts).ipynb  Table (data type, example value).ipynb  Text (data type).ipynb  Violin (value distribution).ipynb  Workflow (parking fines).ipynb  missing data from file.ipynb  missing data import and export.ipynb  missing data structure 1.ipynb  missing data structure 2.ipynb  tmp_test_output.csv
notebooks/calculate/: Simple example.ipynb  logfile_tmp.txt  tmp_test_output.csv
notebooks/missingdatastructure/: case_study_UCI_diabetes_dataset.ipynb  missing data from file.ipynb  missing data import and export.ipynb  missing data structure 1.ipynb  missing data structure 2.ipynb
notebooks/report/: Report.ipynb
notebooks/visualize/: Bar chart (missing values).ipynb  Box plot (numeric, date & time).ipynb  Box plot (value distribution).ipynb  Datetime value distribution.ipynb  Dot & whisker (value lengths).ipynb  Histogram (value distribution).ipynb  Line chart (value counts).ipynb  Lollipop (value counts).ipynb  Stacked bar chart (value counts).ipynb  Table (data type, example value).ipynb  Text (data type).ipynb  Violin (value distribution).ipynb
notebooks/workflow/: Step_1_video.ipynb  Step_2_video.ipynb  Step_3_video.ipynb  Step_4_video.ipynb  Step_5_video.ipynb  Step_6_video.ipynb  Workflow (parking fines).ipynb
tests/: check_notebooks.sh  test_calculate.py  test_datasets.py  test_plot.py  test_report.py  test_utils.py
vizdataquality/: calculate.py  datasets.py  explanation_graph.py  missing_data_functions.py  missing_data_io.py  missing_data_plots.py  missing_data_utils.py  plot.py  report.py  utils.py
