[tool.black]
line-length = 79

[tool.poetry]
name = "vizdataquality"
packages = [{ include = "vizdataquality" }]
version = "1.1.2"
description = "Visualize data quality"
authors = [
    "Roy Ruddle <R.A.Ruddle@leeds.ac.uk>",
    "Layik Hama <L.Hama@leeds.ac.uk>",
]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://vizdataquality.readthedocs.io/en/latest/"
repository = "https://github.com/royruddle/vizdataquality"
classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24"
pandas = "^2"
tomli = "^2.0"
matplotlib = "^3.7.2"

notebook = { version = "^6.4", optional = true }
Sphinx = { version = "^7.0", optional = true }
pydata-sphinx-theme = { version = "^0.14", optional = true }
myst-parser = { version = "*", optional = true}
pytest = { version = "^6.2", optional = true }
chardet = "^5.2.0"

[tool.poetry.extras]
notebooks = ["notebook", "matplotlib"]
doc = ["Sphinx", "pydata-sphinx-theme", "myst-parser", "matplotlib"]
test = ["pytest"]
all = ["notebook", "matplotlib", "Sphinx", "pydata-sphinx-theme", "pytest", "myst-parser"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
